--- a/styles/base.less
+++ b/styles/base.less
@@ -236,7 +236,7 @@ h1 {
 	}
 	p {
 		margin:1em 0;
-		line-height:1.45;
+		line-height:1.5;
 	}
 	p > code { padding:0 2px; background-color:#eee; font-size:92%; }
 	ul, ol { padding-left:2em; }
@@ -249,9 +249,9 @@ h1 {
 		list-style:disc outside;
 		padding-bottom:5px;	
 	}
-	img, audio, video {
+	img, audio, video, .block {
 		display: block;
-		margin: 0 auto;
+		margin: 20px auto;
 	}
 }
 
