--- a/styles/base.css
+++ b/styles/base.css
@@ -360,7 +360,7 @@ h1 a {
 }
 #content .post p {
   margin: 1em 0;
-  line-height: 1.45;
+  line-height: 1.5;
 }
 #content .post p > code {
   padding: 0 2px;
@@ -382,9 +382,10 @@ h1 a {
 }
 #content .post img,
 #content .post audio,
-#content .post video {
+#content .post video,
+#content .post .block {
   display: block;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 #content h1 {
   font-size: 24px;
