--- a/styles/base.less
+++ b/styles/base.less
@@ -190,11 +190,9 @@ h1 {
 }
 
 #adsense {
-	position:absolute;
-	right:20px;
-	top:60px;
-	width:125px;
-	height:125px;
+	ins {
+		background: transparent;
+	}
 }
 
 // ----------------------- // page / post
