--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,18 @@
 	<section id="content">
 		{{ content }}
 	</section>
+
+	{% unless page.date %}
+	<banner id="adsense">
+	    <script>
+        google_ad_client = "ca-pub-7929057657473864";
+        google_ad_slot = "4714209316";
+        google_ad_width = 728;
+        google_ad_height = 90;
+        </script>
+        <script src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+	</banner>
+	{% endunless %}
 	
 	<footer id="footer">
 		
@@ -79,17 +91,6 @@
 			</span>
 		</section>
 	</footer>
-	
-	{% unless page.date %}
-	<banner id="adsense">
-	    <script>
-        google_ad_client = "ca-pub-7929057657473864";
-        google_ad_slot = "4714209316";
-        google_ad_width = google_ad_height = 125;
-        </script>
-        <script src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
-	</banner>
-	{% endunless %}
 	
 </div>
 <script>(function(){
