--- a/styles/base.css
+++ b/styles/base.css
@@ -316,12 +316,8 @@ h1 a {
   padding: 10px 0;
   font-family: "Helvetica Neue", sans-serif;
 }
-#adsense {
-  position: absolute;
-  right: 20px;
-  top: 60px;
-  width: 125px;
-  height: 125px;
+#adsense ins {
+  background: transparent;
 }
 .page {
   padding-top: 40px;
