--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,13 +59,13 @@
 
 	{% unless page.date %}
 	<banner id="adsense">
-	    <script>
-        google_ad_client = "ca-pub-7929057657473864";
-        google_ad_slot = "4714209316";
-        google_ad_width = 728;
-        google_ad_height = 90;
-        </script>
-        <script src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
+	    <script type="text/javascript">
+		google_ad_client = "ca-pub-7929057657473864";
+		google_ad_slot = "5954298656";
+		google_ad_width = 728;
+		google_ad_height = 90;
+		</script>
+		<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
 	</banner>
 	{% endunless %}
 	
