--- a/styles/base.css
+++ b/styles/base.css
@@ -316,6 +316,9 @@ h1 a {
   padding: 10px 0;
   font-family: "Helvetica Neue", sans-serif;
 }
+#adsense {
+  padding: 20px 0;
+}
 #adsense ins {
   background: transparent;
 }
