--- a/styles/base.less
+++ b/styles/base.less
@@ -189,13 +189,6 @@ h1 {
 	}
 }
 
-#adsense {
-	padding: 0px 0;
-	ins {
-		background: transparent;
-	}
-}
-
 // ----------------------- // page / post
 
 .page {
@@ -275,6 +268,7 @@ h1 {
 		padding: 5px 0;
 	}
 	#adsense {
+		position: absolute;
 		right:40px;
 		top:0px;
 	}
