--- a/styles/base.css
+++ b/styles/base.css
@@ -321,6 +321,10 @@ h1 a {
 .page #header h1 {
   font-size: 15px;
 }
+#content .post {
+  padding-bottom: 1.5em;
+  border-bottom: 1px dotted #ddd;
+}
 #content .post a[rel=external] {
   content: " " url(/images/external.gif);
 }
@@ -348,8 +352,8 @@ h1 a {
   padding: 1px 3px 6px;
 }
 #content .post p {
-  margin: 1em 0;
-  line-height: 1.5;
+  margin: 1.5em 0;
+  line-height: 1.65;
   font-weight: 300;
 }
 #content .post p > code {
@@ -411,33 +415,7 @@ h1 a {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: none;
   position: relative;
-}
-.highlight:after,
-.highlight:before {
-  content: ' ';
-  display: block;
-  position: absolute;
-  max-width: 30px;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 94%;
-  background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(51, 51, 51, 0)), color-stop(100%, rgba(51, 51, 51, 0.9)));
-  background: -webkit-linear-gradient(0deg, rgba(51, 51, 51, 0), rgba(51, 51, 51, 0.9));
-  background: -moz-linear-gradient(0deg, rgba(51, 51, 51, 0), rgba(51, 51, 51, 0.9));
-  background: -o-linear-gradient(0deg, rgba(51, 51, 51, 0), rgba(51, 51, 51, 0.9));
-  background: linear-gradient(0deg, rgba(51, 51, 51, 0), rgba(51, 51, 51, 0.9));
-  -webkit-pointer-events: none;
-  pointer-events: none;
-}
-.highlight:before {
-  right: 94%;
-  left: 0;
-  background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(51, 51, 51, 0.9)), color-stop(100%, rgba(51, 51, 51, 0)));
-  background: -webkit-linear-gradient(0deg, rgba(51, 51, 51, 0.9), rgba(51, 51, 51, 0));
-  background: -moz-linear-gradient(0deg, rgba(51, 51, 51, 0.9), rgba(51, 51, 51, 0));
-  background: -o-linear-gradient(0deg, rgba(51, 51, 51, 0.9), rgba(51, 51, 51, 0));
-  background: linear-gradient(0deg, rgba(51, 51, 51, 0.9), rgba(51, 51, 51, 0));
+  box-shadow: inset 0 2px 9px rgba(0, 0, 0, 0.4);
 }
 #footer {
   height: 80px;
