--- a/styles/base.less
+++ b/styles/base.less
@@ -102,6 +102,8 @@ h1 {
 }
 
 #content .post {
+	padding-bottom: 1.5em;
+	border-bottom: 1px dotted #ddd;
 	a[rel=external] {
 		content: " " url(/images/external.gif);
 	}
@@ -127,8 +129,8 @@ h1 {
 		padding:1px 3px 6px;
 	}
 	p {
-		margin:1em 0;
-		line-height:1.6;
+		margin:1.5em 0;
+		line-height:1.65;
 		font-weight:300;
 	}
 	p > code { padding:0 2px; background-color:#eee; font-size:92%; }
@@ -182,25 +184,7 @@ h1 {
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: none;
 	position:relative;
-	&:after,
-	&:before {
-		content: ' ';
-		display:block;
-		position:absolute;
-		max-width:30px;
-		top:0;
-		right:0;
-		bottom:0;
-		left:94%;
-		.horizontal-gradient(rgba(51,51,51,0),rgba(51,51,51,.9));
-		-webkit-pointer-events:none;
-		pointer-events:none;
-	}
-	&:before {
-		right:94%;
-		left:0;
-		.horizontal-gradient(rgba(51,51,51,.9),rgba(51,51,51,0));
-	}
+	box-shadow: inset 0 2px 9px rgba(0,0,0,0.4);
 }
 
 // ----------------------- // footer
