--- a/styles/mixins.less
+++ b/styles/mixins.less
@@ -12,11 +12,18 @@
     -ms-filter: %('progid:DXImageTransform.Microsoft.Alpha(Opacity=%d)', @alpha * 100);
 }
 .horizontal-gradient(@from, @to){
-    background:-webkit-gradient(linear, left top, right top, color-stop(0%, @from), color-stop(100%, @to));
-    background:-webkit-linear-gradient(0deg, @from, @to);
-    background:-moz-linear-gradient(0deg, @from, @to);
-    background:-o-linear-gradient(0deg, @from, @to);
-    background:linear-gradient(0deg, @from, @to);
+    background: -webkit-gradient(linear, left top, right top, from(@from), to(@to));
+    background: -webkit-linear-gradient(left, @from, @to);
+    background:    -moz-linear-gradient(left, @from, @to);
+    background:      -o-linear-gradient(left, @from, @to);
+    background:         linear-gradient(to right, @from, @to);
+}
+.vertical-gradient(@from, @to){
+    background: -webkit-gradient(linear, left top, left bottom, from(@from), to(@to));
+    background: -webkit-linear-gradient(top, @from, @to);
+    background:    -moz-linear-gradient(top, @from, @to);
+    background:      -o-linear-gradient(top, @from, @to);
+    background:         linear-gradient(to bottom, @from, @to);
 }
 .text-shadow(@shadow) {
     -webkit-text-shadow: @shadow;
